--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Write</a>
+            <a class="nav-link" href="/write.html">Write</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">임시</a>
